# abhyasa-protocol

./: DESIGN_NOTES.md  README.md  pyproject.toml
examples/: README.md  two_agent_custody.py
specification/: Abhyasa.cfg  Abhyasa.tla  README.md
src/abhyasa/: __init__.py  polarity.py
src/abhyasa/bindings/: __init__.py  a2a.py
src/abhyasa/custody/: __init__.py  channel.py  durable.py  machine.py  principal_state.py  receiver.py
src/abhyasa/instantiations/: __init__.py  anumati.py  oauth.py  phala.py
src/abhyasa/mcp_server/: __init__.py  __main__.py  server.py  tools.py
src/abhyasa/types/: __init__.py  custody_ack.py  obligation.py  safe_action.py
src/abhyasa/validators/: __init__.py  admissibility.py
tests/: conftest.py  test_a2a_binding.py  test_crash_recovery.py  test_custody_machine.py  test_deliver_or_report.py  test_extension_uris.py  test_fuzz_deliver_or_report.py  test_instantiations.py  test_oauth.py  test_polarity.py  test_types.py
tests/mcp_server/: test_tools.py
v1/: README.md  SPEC.md  manifest.json
